[tool.poetry]
name = "southwest"
version = "0.1.0"
description = ""
authors = ["Matthew Grossman <matthewryangrossman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
