[tool.poetry]
name = "southwest"
version = "0.1.0"
description = ""
authors = ["Matthew Grossman <matthewryangrossman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.24.0"
selenium-wire = "^4.5.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
black = "^20.8b1"
reorder-python-imports = "^2.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
