
[tool.poetry]
name = "southwest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
reorder-python-imports = "^3.0.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
